src/main/java/com/example/Demo/errors/exception/files/EmptyFieldException.java
package com.example.Demo.errors.exception.files;

public class EmptyFieldException extends RuntimeException {
    public EmptyFieldException(String message) {
        super(message);
    }
}
